--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-portable-text": "^0.4.3"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.10",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
